<resources>
    <string name="app_name">LiczKalorie</string>
    <string name="tabMain">Home</string>
    <string name="tabSearch">Szukaj</string>
    <string name="tabStats">Stats</string>
    <string name="tabProfile">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">Płeć</string>
    <string name="age">Wiek</string>
    <string name="height">Wzrost [cm]</string>
    <string name="weight">Waga [kg]</string>
    <string name="name">Imię</string>
</resources>
