<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        app:tabIndicatorColor="@android:color/holo_red_dark"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@android:color/black"
        app:tabTextColor="@android:color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_home_48"
            android:text="@string/tabMain" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_search_48"
            android:text="@string/tabSearch" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_chart_48"
            android:text="@string/tabStats" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_person_48"
            android:text="@string/tabProfile" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF" />
</LinearLayout>