<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tabProfile">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_weight="10"
                    android:text="Uzupełnij swoje dane, aby program mógł poprawnie wyliczyć Twoje aktualne BMI oraz dzienne spożycie kalorii, węglowodanów, białek oraz tłuszczy."
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/info2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_info_outline_black_24dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:textSize="12sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/textWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:text="@string/weight"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="" />

            <TextView
                android:id="@+id/textHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:text="@string/height"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="" />

            <TextView
                android:id="@+id/textAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:text="@string/age"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="" />

            <TextView
                android:id="@+id/textGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:text="@string/gender"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Mężczyzna" />

                <RadioButton
                    android:id="@+id/radioK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kobieta" />
            </RadioGroup>

            <Button
                android:id="@+id/btnSaveProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Zapisz"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
